# src/pages/api/[player]/[profile]/accessorybag.ts
@@ -1,6 +1,7 @@
 import { createInventoryEndpoint } from "@/inventory-endpoint.ts";
 
 export const GET = createInventoryEndpoint({
-    getInventoryData: (playerProfile) => playerProfile.inventory?.bag_contents?.talisman_bag?.data,
-    notFoundMessage: "Cannot find accessory bag data"
+  getInventoryData: (playerProfile) =>
+    playerProfile.inventory?.bag_contents?.talisman_bag?.data,
+  notFoundMessage: "Cannot find accessory bag data",
 });
