# src/pages/api/[player]/[profile]/enderchest.ts
@@ -1,6 +1,7 @@
 import { createInventoryEndpoint } from "@/inventory-endpoint.ts";
 
 export const GET = createInventoryEndpoint({
-    getInventoryData: (playerProfile) => playerProfile.inventory?.ender_chest_contents?.data,
-    notFoundMessage: "Cannot find ender chest data"
+  getInventoryData: (playerProfile) =>
+    playerProfile.inventory?.ender_chest_contents?.data,
+  notFoundMessage: "Cannot find ender chest data",
 });
