# src/pages/api/[player]/[profile]/inventory.ts
@@ -1,6 +1,7 @@
 import { createInventoryEndpoint } from "@/inventory-endpoint.ts";
 
 export const GET = createInventoryEndpoint({
-    getInventoryData: (playerProfile) => playerProfile.inventory?.inv_contents?.data,
-    notFoundMessage: "Cannot find inventory data"
+  getInventoryData: (playerProfile) =>
+    playerProfile.inventory?.inv_contents?.data,
+  notFoundMessage: "Cannot find inventory data",
 });
